<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_app"
    tools:context=".activity.FormularioActivity">

    <include
        android:id="@+id/include2"
        layout="@layout/toobar_voltar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="32dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include2">

        <androidx.cardview.widget.CardView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center_horizontal"
            app:cardCornerRadius="5dp">

            <ImageView
                android:id="@+id/imgProduto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:onClick="verificarPermissaoGaleria"
                android:src="@drawable/stock"
                tools:ignore="UsingOnClickInXml" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/txtproduto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/produto"
            android:textColor="@color/white"/>

        <EditText
            android:id="@+id/edtproduto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:inputType="text"
            android:hint="@string/produto_produto"
            android:background="@drawable/bg_edit"
            android:padding="10dp"/>

        <TextView
            android:id="@+id/txtquanti"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginTop="5dp"
            android:textStyle="bold"
            android:text="@string/quanti"
            android:textColor="@color/white"/>

        <EditText
            android:id="@+id/edtquanti"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:inputType="number"
            android:hint="@string/quanti_estoque"
            android:background="@drawable/bg_edit"
            android:padding="10dp"/>

        <TextView
            android:id="@+id/txtpreco"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginTop="5dp"
            android:textStyle="bold"
            android:text="@string/preco"
            android:textColor="@color/white"/>

        <EditText
            android:id="@+id/edtpreco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:inputType="numberDecimal"
            android:hint="@string/preco_preco"
            android:background="@drawable/bg_edit"
            android:padding="10dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:backgroundTint="#63F64710"
            android:fontFamily="@font/pokem"
            android:onClick="salvarPrtoduto"
            android:text="@string/btn_salvar"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />



    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>