<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_app"
    tools:context=".autenticacao.CriarContaActivity">

    <include
        android:id="@+id/include3"
        layout="@layout/toobar_voltar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="24dp">

            <TextView
                android:id="@+id/txtnome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_Nome"
                android:textColor="#D6E0E4"
                android:textSize="14dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edtNome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@drawable/bg_edit"
                android:hint="@string/edt_nome"
                android:padding="16dp" />

            <TextView
                android:id="@+id/txtlogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="04dp"
                android:text="@string/txt_login"
                android:textColor="#D6E0E4"
                android:textSize="14dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edtemail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@drawable/bg_edit"
                android:hint="@string/edt_mail"
                android:inputType="textEmailAddress"
                android:padding="16dp" />

            <TextView
                android:id="@+id/txtsenha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/digite_sua_senha"
                android:textColor="#D6E0E4"
                android:textSize="14dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edtsenha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@drawable/bg_edit"
                android:hint="@string/edtsenha"
                android:inputType="textPassword"
                android:padding="16dp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/edit"
                android:onClick="validaDados"
                android:text="@string/criar_conta"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="15dp" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:indeterminateTint="@color/white" />

        </LinearLayout>

    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>